DEPRECIATED-rss-evaluation-setup.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rss-evaluation-deployment
  labels:
    app: rss-evaluation
spec:
  replicas: 1
  minReadySeconds: 20
  selector:
    matchLabels:
      app: rss-evaluation
  template:
    metadata:
      labels:
        app: rss-evaluation
    spec:
      containers:
      - name: rss-evaluation
        image: 855430746673.dkr.ecr.us-east-1.amazonaws.com/matt-oberlies-00000916-rss-evaluation:latest
        ports:
        - containerPort: 8080
        livenessProbe:
          httpGet:
            path: /actuator/health
            port: 8080
          initialDelaySeconds: 3
          periodSeconds: 3
          failureThreshold: 5
        startupProbe:
          httpGet:
            path: /actuator/health
            port: 8080
          initialDelaySeconds: 15
          periodSeconds: 3
          failureThreshold: 5
---

apiVersion: v1
kind: Service
metadata:
  name: rss-evaluation-service
spec:
  selector:
    app: rss-evaluation
  ports:
    - name: http
      protocol: TCP
      port: 8080
      targetPort: 8080
	  
---

apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: rss-evaluation-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
  - http:
      paths:
      - path: /evaluation(.+)
        backend:
          serviceName: rss-evaluation
          servicePort: 8080
