rss-evaluation-DSI.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rss-evaluation-deployment
  namespace: rss-evaluation
  labels:
    app: rss
spec:
  replicas: 1
#  minReadySeconds: 20
  selector:
    matchLabels:
      app: rss
  template:
    metadata:
      labels:
        app: rss
    spec:
      volumes:
      - name: config-rss-evaluation-service
        configMap:
          name: fluent-conf
      containers:
      - name: fluentd
        image: grafana/fluent-plugin-loki:latest
        ports:
        - containerPort: 24224
        imagePullPolicy: IfNotPresent
        volumeMounts:
        - name: config-rss-evaluation-service
          mountPath: /fluentd/etc/fluent.conf
          subPath: fluent.conf
      - name: rss-evaluation
        image: sentrurion/rss-evaluation-service:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
#        livenessProbe:
#          httpGet:
#            path: /actuator/health
#            port: 8080
#          initialDelaySeconds: 3
#          periodSeconds: 3
#          failureThreshold: 5
#        startupProbe:
#          httpGet:
#            path: /actuator/health
#            port: 8080
#          initialDelaySeconds: 15
#          periodSeconds: 3
#          failureThreshold: 5
---

apiVersion: v1
kind: Service
metadata:
  name: rss-evaluation-service
  namespace: rss-evaluation
spec:
  selector:
    app: rss
  ports:
    - name: http
      protocol: TCP
      port: 8080
      targetPort: 8080
---

apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: rss-evaluation-ingress
  namespace: rss-evaluation
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
  - http:
      paths:
      - path: /evaluation(.*)
        backend:
          serviceName: rss-evaluation-service
          servicePort: 8080
