rss-evaluation-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: rss-evaluation-ingress
  namespace: rss-evaluation
  annotations:
    # kubernetes.io/ingress.class: nginx
    # nginx.ingress.kubernetes.io/use-regex: "true"
    # nginx.ingress.kubernetes.io/rewrite-target: /$1
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - http:
      paths:
      - path: /evaluation(.*)
        pathType: Prefix
        backend:
          service:
	          name: rss-evaluation-service
            port: 
	            number: 80
